# sar_generator

./: Dockerfile  README.md  app.py  benchmark.py  config.py  config_example.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
adapters/: __init__.py  database.py  output.py  rotation.py
benchmark/: __init__.py  performance.py
compat/: pydantic_compat.py
docs/: config_example.yaml
engine/: __init__.py  anomaly.py  generator.py
models/: __init__.py  node_profiles.py
output/: sar_synthetic_node_ceph-01_20260310_203833.csv  sar_synthetic_node_ceph-01_20260310_203838.json  sar_synthetic_node_ceph-01_20260419_225046.csv  sar_synthetic_node_ceph-01_20260419_225052.json  sar_synthetic_node_ceph-02_20260310_203833.csv  sar_synthetic_node_ceph-02_20260310_203839.json  sar_synthetic_node_ceph-02_20260419_225046.csv  sar_synthetic_node_ceph-02_20260419_225054.json  sar_synthetic_node_ceph-03_20260310_203833.csv  sar_synthetic_node_ceph-03_20260310_203841.json  sar_synthetic_node_ceph-03_20260419_225047.csv  sar_synthetic_node_ceph-03_20260419_225055.json  sar_synthetic_node_compute-01_20260310_203834.csv  sar_synthetic_node_compute-01_20260310_203842.json  sar_synthetic_node_compute-01_20260419_225047.csv  sar_synthetic_node_compute-01_20260419_225056.json  sar_synthetic_node_compute-02_20260310_203834.csv  sar_synthetic_node_compute-02_20260310_203843.json  sar_synthetic_node_compute-02_20260419_225047.csv  sar_synthetic_node_compute-02_20260419_225057.json  sar_synthetic_node_compute-03_20260310_203834.csv  (+51 more)
streaming/: __init__.py  streamer.py
(+10 files in other folders)
